Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76314

Embedded PDFs do not work and are causing crashes on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.4
    • 5.13.0 RC 2
    • WebEngine
    • None
    • Windows
    • I01a0c93ab23f54e4272f5aeb30578de0dcf18932

    Description

      Trying to load embedded PDF documents such as those on the PDF object web site will result in the site not loading on Linux and crashing on Windows.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-76314
          # Subject Branch Project Status CR V

          Activity

            People

              davidsz Szabolcs David
              mibrunin Michael Bruning
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes