Fix embedded PDFs when plugins are disabled

Cover all cases from https://pdfobject.com/static

- Plugin placeholder is generally broken: displays garbage and crashes
on interaction.  Fix it and show when PDFs are included by <embed>
or <object> tags.

- Do not start an automatical download when the disabled PDF plugin
was requested by an iframe. Show a clickable placeholder and let the
end-users start it manually.

- Remove unused class PluginPlaceholderQt

Task-number: QTBUG-76314
Change-Id: I01a0c93ab23f54e4272f5aeb30578de0dcf18932
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>