src/core/extensions/pdf_iframe_navigation_throttle_qt.h
@@ -1,6 +1,6 @@
 /****************************************************************************
 **
-** Copyright (C) 2020 The Qt Company Ltd.
+** Copyright (C) 2021 The Qt Company Ltd.
 ** Contact: https://www.qt.io/licensing/
 **
 ** This file is part of the QtWebEngine module of the Qt Toolkit.
@@ -37,39 +37,46 @@
 **
 ****************************************************************************/
 
-// Copyright 2013 The Chromium Authors. All rights reserved.
+// based on //chrome/browser/plugins/pdf_iframe_navigation_throttle.h
+// Copyright 2017 The Chromium Authors. All rights reserved.
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#include "plugin_placeholder_qt.h"
+#ifndef PDF_IFRAME_NAVIGATION_THROTTLE_QT
+#define PDF_IFRAME_NAVIGATION_THROTTLE_QT
 
-#include "content/public/renderer/render_frame.h"
-#include "content/public/renderer/v8_value_converter.h"
-#include "gin/object_template_builder.h"
+#include "content/public/browser/navigation_throttle.h"
 
-namespace QtWebEngineCore {
+#include "base/memory/weak_ptr.h"
 
-// static
-gin::WrapperInfo PluginPlaceholderQt::kWrapperInfo = {gin::kEmbedderNativeGin};
-
-PluginPlaceholderQt::PluginPlaceholderQt(content::RenderFrame* render_frame,
-                                         const blink::WebPluginParams& params,
-                                         const std::string& html_data)
-    : PluginPlaceholderBase(render_frame, params, html_data)
-{}
-
-PluginPlaceholderQt::~PluginPlaceholderQt() {}
-
-v8::Local<v8::Value> PluginPlaceholderQt::GetV8Handle(v8::Isolate* isolate)
-{
-    return gin::CreateHandle(isolate, this).ToV8();
+namespace content {
+class NavigationHandle;
+struct WebPluginInfo;
 }
 
-gin::ObjectTemplateBuilder PluginPlaceholderQt::GetObjectTemplateBuilder(v8::Isolate* isolate)
-{
-    return gin::Wrappable<PluginPlaceholderQt>::GetObjectTemplateBuilder(isolate)
-        .SetMethod<void (QtWebEngineCore::PluginPlaceholderQt::*)()>(
-            "hide", &PluginPlaceholderQt::HideCallback);
-}
+namespace extensions {
 
-}  // namespace QtWebEngineCore
+// This class prevents automatical download of PDFs when they are embedded
+// in subframes and plugins are disabled in API.
+class PDFIFrameNavigationThrottleQt : public content::NavigationThrottle
+{
+public:
+    static std::unique_ptr<content::NavigationThrottle> MaybeCreateThrottleFor(content::NavigationHandle *handle);
+
+    explicit PDFIFrameNavigationThrottleQt(content::NavigationHandle *handle);
+    ~PDFIFrameNavigationThrottleQt() override;
+
+    // content::NavigationThrottle
+    content::NavigationThrottle::ThrottleCheckResult WillProcessResponse() override;
+    const char *GetNameForLogging() override;
+
+private:
+    void OnPluginsLoaded(const std::vector<content::WebPluginInfo> &plugins);
+    void LoadPlaceholderHTML();
+
+    base::WeakPtrFactory<PDFIFrameNavigationThrottleQt> weak_factory_{this};
+};
+
+} // namespace extensions
+
+#endif // PDF_IFRAME_NAVIGATION_THROTTLE_QT
